cluster/apps/ingress/static-routes/valetudo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: valetudo
  namespace: ingress
spec:
  type: ExternalName
  externalName: 192.168.13.50
