cluster/apps/ingress/static-routes/valetudo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: valetudo
  namespace: ingress
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header  Authorization ${S_VALETUDO_AUTH_HEADER}
spec:
  rules:
  - host: vacuum.${S_HOMEPROD_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: valetudo
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
    - hosts:
      - vacuum.${S_HOMEPROD_DOMAIN}
